--- a/build.gradle
+++ b/build.gradle
@@ -1,31 +1,19 @@
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
+
 buildscript {
-  repositories {
-    mavenCentral()
-  }
-  dependencies {
-    classpath 'com.android.tools.build:gradle:1.3.1'
-  }
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:1.3.0'
+
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
+    }
 }
 
 allprojects {
-  repositories {
-    mavenCentral()
-  }
+    repositories {
+        jcenter()
+    }
 }
-
-ext {
-  minSdkVersion = 8
-  targetSdkVersion = 23
-  compileSdkVersion = 23
-  buildToolsVersion = '23.0.0'
-  sourceCompatibilityVersion = JavaVersion.VERSION_1_7
-  targetCompatibilityVersion = JavaVersion.VERSION_1_7
-}
-
-ext.deps = [
-    // Test dependencies
-    junit      : 'junit:junit:4.10',
-    festandroid: 'com.squareup:fest-android:1.0.7',
-    robolectric: 'org.robolectric:robolectric:2.2',
-    intellijannotations: 'com.intellij:annotations:12.0'
-]
